Bug 310242 - Placemarks without a name are not shown
Summary: Placemarks without a name are not shown
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5 (KDE 4.10)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-17 09:23 UTC by Dennis Nienhüser
Modified: 2012-12-11 22:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
canterbury_bus_stops.kml (41.26 KB, application/xml)
2012-11-17 09:24 UTC, Dennis Nienhüser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Nienhüser 2012-11-17 09:23:11 UTC
There's a regression in master resulting in placemarks that do not have a name not to be shown on the map. Works fine in the KDE/4.9 branch.
Comment 1 Dennis Nienhüser 2012-11-17 09:24:06 UTC
Created attachment 75310 [details]
canterbury_bus_stops.kml

Test file with a mixture of named and unnamed placemarks.
Comment 2 Thibaut Gridel 2012-12-11 22:00:24 UTC
Git commit 87fbaae2ad883af736ad95ec245dd05570eb2381 by Thibaut Gridel.
Committed on 11/12/2012 at 22:20.
Pushed by tgridel into branch 'master'.

Do return an empty but not null labelRect if no labelText

Placemark symbol also competes for room, so it's valid to separate
an empty label on a displayable Placemark from one that would overlap
with existing text.

M  +0    -3    src/lib/PlacemarkLayout.cpp

http://commits.kde.org/marble/87fbaae2ad883af736ad95ec245dd05570eb2381