Do return an empty but not null labelRect if no labelText

Placemark symbol also competes for room, so it's valid to separate
an empty label on a displayable Placemark from one that would overlap
with existing text.

BUG: 310242